--- a/fifa_tournament/package.json
+++ b/fifa_tournament/package.json
@@ -20,7 +20,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.0.0-alpha.6",
-    "bootstrap-loader": "2.1.0",
+    "bootstrap-loader": "^2.1.0",
     "classnames": "^2.2.5",
     "css-loader": "^0.28.5",
     "expose-loader": "^0.7.3",
@@ -31,12 +31,14 @@
     "lodash": "^4.17.4",
     "marked": "^0.3.6",
     "node-sass": "^4.5.3",
+    "popper.js": "^1.12.5",
     "postcss": "^6.0.10",
     "postcss-loader": "^2.0.6",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
@@ -60,7 +62,7 @@
     "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.3.0",
+    "eslint-plugin-react": "^7.4.0",
     "react-hot-loader": "^1.3.1"
   }
 }
